--- a/myproduct.html
+++ b/myproduct.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -92,36 +91,54 @@
   </div>
   <div class="myproducts-container">
     <h1>My Posted Products</h1>
-    <div id="products-container" class="products-grid">
+    <div id="items-container" class="products-grid">
       <!-- User's products will be rendered here -->
     </div>
   </div>
-  <script>
-    const userId = localStorage.getItem('userId');
-    if (!userId) {
-      document.getElementById('products-container').innerHTML = '<p>Please log in to view your products.</p>';
-    } else {
-      fetch(`http://localhost:3000/user/${userId}/items`)
-        .then(res => res.json())
-        .then(items => {
-          if (!items.length) {
-            document.getElementById('products-container').innerHTML = '<p>No products posted yet.</p>';
+<script>
+    function renderItems(items) {
+          const container = document.getElementById('items-container');
+            container.innerHTML = '';
+            if (!items.length) {
+            container.innerHTML = '<p>No items found.</p>';
             return;
-          }
-          document.getElementById('products-container').innerHTML = items.map(item => `
-            <div class="product-card">
-              <img src="${item.image_url}" alt="${item.product_name}" />
-              <h2>${item.product_name}</h2>
-              <p>Location: ${item.location}</p>
-              <p>Price: $${item.price}</p>
-              <p>Condition: ${item.condition}</p>
-            </div>
-          `).join('');
-        })
-        .catch(err => {
-          document.getElementById('products-container').innerHTML = '<p>Failed to load your products.</p>';
-        });
+            }
+            items.forEach(item => {
+            const card = document.createElement('div');
+            card.className = 'image-card';
+            card.setAttribute('data-category', item.category_name || '');
+            card.setAttribute('data-subcategory', item.subcategory_name || '');
+            card.setAttribute('data-location', item.location || '');
+            card.setAttribute('data-condition', item.condition || '');
+            card.setAttribute('data-release', item.release_date || '');
+            card.innerHTML = `
+                <img src="${item.image_url || 'placeholder.jpg'}" alt="${item.product_name}">
+                <div class="details">
+                <h3>${item.product_name}</h3>
+                <p>Location: ${item.location}</p>
+                <p>Condition: ${item.condition}</p>
+                <p class="price">$${item.price}</p>
+                </div>
+            `;
+
+                card.onclick = function() {
+                // Redirect to item.html and pass the item ID or product details in query parameters
+                const productId = item.product_id;
+                window.location.href = `item.html?id=${productId}`;
+            };
+
+      container.appendChild(card);
+    });
+}
+
+    async function fetchItems() {
+      const res = await fetch('http://localhost:4000/userItems');  // Adjust to your backend URL
+      if (!res.ok) throw new Error('Network response was not ok');
+      const items = await res.json();
+      window.allItems = items; // store for filtering
+      console.log(items)
+      renderItems(items);
     }
-  </script>
-</body>
-</html>
+
+  document.addEventListener('DOMContentLoaded', fetchItems);
+</script>
