--- a/item.html
+++ b/item.html
@@ -142,6 +142,7 @@
       document.getElementById('itemCost').textContent = `Price: $${item.price}`;
       document.getElementById('itemSeller').textContent = `Location: ${item.location}`;
       document.getElementById('itemInfo').innerHTML = `
+        Description: ${item.item_description}<br>
         Condition: ${item.condition}<br>
         Released: ${item.release_date}<br>
         Category: ${item.category_name}<br>
