--- a/myproduct.html
+++ b/myproduct.html
@@ -47,33 +47,54 @@
       max-width: 1100px;
       margin-top: 20px;
     }
-    .product-card {
-      background-color: #e0e0e0;
-      padding: 18px 16px 16px 16px;
-      border-radius: 8px;
-      text-align: center;
-      box-shadow: 0 2px 8px rgba(0,0,0,0.06);
+    .image-card {
+      background-color: #fff;
+      border: 1px solid #eee;
+      border-radius: 12px;
+      overflow: hidden;
+      cursor: pointer;
+      transition: box-shadow 0.2s, transform 0.2s;
+      text-align: left;
       display: flex;
       flex-direction: column;
-      align-items: center;
+      justify-content: flex-start;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.06);
+      min-height: 260px;
     }
-    .product-card img {
+    .image-card:hover {
+      box-shadow: 0 4px 16px rgba(0,0,0,0.12);
+      transform: translateY(-4px) scale(1.03);
+    }
+    .image-card img {
       width: 100%;
-      max-width: 220px;
-      height: 140px;
+      height: 160px;
       object-fit: cover;
-      border-radius: 6px;
-      margin-bottom: 12px;
-      background: #c5e1a5;
+      background: #f7f7f7;
+      border-bottom: 1px solid #eee;
     }
-    .product-card h2 {
-      font-size: 1.2rem;
-      margin: 8px 0 6px 0;
-      color: #388e3c;
+    .image-card .details {
+      padding: 16px 16px 10px 16px;
+      flex: 1;
+      display: flex;
+      flex-direction: column;
+      justify-content: flex-start;
     }
-    .product-card p {
-      margin: 4px 0;
-      font-size: 1rem;
+    .image-card .details h3 {
+      font-size: 17px;
+      margin: 0 0 6px 0;
+      color: #222;
+      font-weight: 600;
+    }
+    .image-card .details p {
+      font-size: 14px;
+      margin: 0 0 8px 0;
+      color: #666;
+    }
+    .image-card .details .price {
+      font-size: 18px;
+      font-weight: bold;
+      color: #00aa5b;
+      margin-top: auto;
     }
     @media (max-width: 700px) {
       .products-grid {
@@ -104,28 +125,28 @@
             return;
             }
             items.forEach(item => {
-            const card = document.createElement('div');
-            card.className = 'image-card';
-            card.setAttribute('data-category', item.category_name || '');
-            card.setAttribute('data-subcategory', item.subcategory_name || '');
-            card.setAttribute('data-location', item.location || '');
-            card.setAttribute('data-condition', item.condition || '');
-            card.setAttribute('data-release', item.release_date || '');
-            card.innerHTML = `
-                <img src="${item.image_url || 'placeholder.jpg'}" alt="${item.product_name}">
-                <div class="details">
-                <h3>${item.product_name}</h3>
-                <p>Location: ${item.location}</p>
-                <p>Condition: ${item.condition}</p>
-                <p class="price">$${item.price}</p>
-                </div>
-            `;
+    const card = document.createElement('div');
+    card.className = 'image-card';
+    card.setAttribute('data-category', item.category_name || '');
+    card.setAttribute('data-subcategory', item.subcategory_name || '');
+    card.setAttribute('data-location', item.location || '');
+    card.setAttribute('data-condition', item.condition || '');
+    card.setAttribute('data-release', item.release_date || '');
+    card.innerHTML = `
+      <img src="${item.image_url || 'placeholder.jpg'}" alt="${item.product_name}">
+      <div class="details">
+      <h3>${item.product_name}</h3>
+      <p>Location: ${item.location}</p>
+      <p>Condition: ${item.condition}</p>
+      <p class="price">$${item.price}</p>
+      </div>
+    `;
 
-                card.onclick = function() {
-                // Redirect to item.html and pass the item ID or product details in query parameters
-                const productId = item.product_id;
-                window.location.href = `item.html?id=${productId}`;
-            };
+    card.onclick = function(e) {
+      e.stopPropagation();
+      const productId = item.product_id;
+      window.location.href = `edititem.html?id=${productId}`;
+    };
 
       container.appendChild(card);
     });
