--- a/profile.html
+++ b/profile.html
@@ -150,16 +150,16 @@
           <div style="height:1px;background:#f0f0f0;margin:36px 0 32px 0;"></div>
           <!-- Quick Links -->
           <div style="display:flex;justify-content:space-between;align-items:center;margin:0 0 36px 0;gap:18px;">
-            <div onclick="alert('My Orders feature coming soon!')" style="flex:1;text-align:center;cursor:pointer;background:#f5f7fa;border-radius:12px;padding:20px 0;box-shadow:0 1px 4px rgba(44,62,80,0.04);font-size:1.08rem;color:#ff5722;font-weight:600;display:flex;flex-direction:column;align-items:center;gap:6px;">
+            <div onclick="window.location.href='orders.html'" style="flex:1;text-align:center;cursor:pointer;background:#f5f7fa;border-radius:12px;padding:20px 0;box-shadow:0 1px 4px rgba(44,62,80,0.04);font-size:1.08rem;color:#ff5722;font-weight:600;display:flex;flex-direction:column;align-items:center;gap:6px;">
               <span style="font-size:1.4em;">&#128179;</span> My Orders
             </div>
-            <div onclick="alert('Wishlist feature coming soon!')" style="flex:1;text-align:center;cursor:pointer;background:#f5f7fa;border-radius:12px;padding:20px 0;box-shadow:0 1px 4px rgba(44,62,80,0.04);font-size:1.08rem;color:#25d366;font-weight:600;display:flex;flex-direction:column;align-items:center;gap:6px;">
+            <div onclick="window.location.href='wishlist.html'" style="flex:1;text-align:center;cursor:pointer;background:#f5f7fa;border-radius:12px;padding:20px 0;box-shadow:0 1px 4px rgba(44,62,80,0.04);font-size:1.08rem;color:#25d366;font-weight:600;display:flex;flex-direction:column;align-items:center;gap:6px;">
               <span style="font-size:1.4em;">&#10084;&#65039;</span> Wishlist
             </div>
-            <div onclick="alert('Messages feature coming soon!')" style="flex:1;text-align:center;cursor:pointer;background:#f5f7fa;border-radius:12px;padding:20px 0;box-shadow:0 1px 4px rgba(44,62,80,0.04);font-size:1.08rem;color:#388e3c;font-weight:600;display:flex;flex-direction:column;align-items:center;gap:6px;">
+            <div onclick="window.location.href='messages.html'" style="flex:1;text-align:center;cursor:pointer;background:#f5f7fa;border-radius:12px;padding:20px 0;box-shadow:0 1px 4px rgba(44,62,80,0.04);font-size:1.08rem;color:#388e3c;font-weight:600;display:flex;flex-direction:column;align-items:center;gap:6px;">
               <span style="font-size:1.4em;">&#9993;&#65039;</span> Messages
             </div>
-            <div onclick="alert('Sales Report feature coming soon!')" style="flex:1;text-align:center;cursor:pointer;background:#f5f7fa;border-radius:12px;padding:20px 0;box-shadow:0 1px 4px rgba(44,62,80,0.04);font-size:1.08rem;color:#ffd966;font-weight:600;display:flex;flex-direction:column;align-items:center;gap:6px;">
+            <div onclick="window.location.href='salesreport.html'" style="flex:1;text-align:center;cursor:pointer;background:#f5f7fa;border-radius:12px;padding:20px 0;box-shadow:0 1px 4px rgba(44,62,80,0.04);font-size:1.08rem;color:#ffd966;font-weight:600;display:flex;flex-direction:column;align-items:center;gap:6px;">
               <span style="font-size:1.4em;">&#128200;</span> Sales Report
             </div>
           </div>
