--- a/login.html
+++ b/login.html
@@ -135,7 +135,7 @@
   <input type="text" id="username" name="username" placeholder="Username" required>
   <input type="password" id="password" name="password" placeholder="Password" required>
   <button type="submit" class="login-btn">Login</button>
-  <button type="button" class="register-btn">Register</button>
+  <button type="button" class="register-btn" ><a href="register.html">Register</a></button>
 </form>
 
 
